updates primary colour, fixes circle overlay alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -55,6 +55,10 @@ p {
     color: $theme-secondary;
 }
 
+.bg-dark .text-muted {
+    color: #c5c5c5;
+}
+
 .text-faded {
     color: rgba(white, .7);
 }
@@ -180,10 +184,13 @@ header {
             }
             p {
                 font-weight: 300;
-                color: rgba(white, .7);
                 font-size: 16px;
                 margin-bottom: 50px;
-                text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+                color: white;
+                text-shadow: none;
+                background: $theme-dark;
+                border-radius: 40px;
+                padding: 11px 6px;
             }
         }
     }
@@ -250,9 +257,10 @@ header.header-small {
         bottom: 0;
         text-align: center;
         width: 100%;
-        height: 100%;
+        height: 96%;
         margin: 0%;
         margin-left: 2%;
+        margin-bottom: 2%;
         @include transition-all;
         .portfolio-box-caption-content {
             width: 100%;
