--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #7f3ba0;
+$theme-primary: #3ac0f9;   // 7f3ba0
 $theme-secondary: #eee;
 $theme-dark: #222;
 
